Add a local kafka